<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>max.hubbard.bettershops</groupId>
    <artifactId>BetterShops</artifactId>
    <version>2.1.32</version>
    <packaging>jar</packaging>

    <name>BetterShops</name>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    <repository>
        <id>everything</id>
        <url>http://repo.citizensnpcs.co/</url>
    </repository>
    <repository>
        <id>placeholderapi</id>
        <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
    <repository>
        <id>codemc-repo</id>
        <url>https://repo.codemc.io/repository/maven-public/</url>
    </repository>
    <repository>
        <id>jitpack.io</id>
        <url>https://jitpack.io</url>
    </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.12.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizensapi</artifactId>
            <version>2.0.27-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizens-main</artifactId>
            <version>2.0.27-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.9</version>
            <scope>provided</scope>
        </dependency>
    <dependency>
        <groupId>com.gmail.filoghost.holographicdisplays</groupId>
        <artifactId>holographicdisplays-api</artifactId>
        <version>2.4.0</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>com.github.MilkBowl</groupId>
        <artifactId>VaultAPI</artifactId>
        <version>1.7</version>
        <scope>provided</scope>
    </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.7</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc.</groupId>
            <artifactId>spigot</artifactId>
            <version>1.8.3</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/deps/craftbukkit/1.8.3.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.spigotmc..</groupId>
            <artifactId>spigot</artifactId>
            <version>1.8.8</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/deps/craftbukkit/1.8.8.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.spigotmc...</groupId>
            <artifactId>spigot</artifactId>
            <version>1.9</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/deps/craftbukkit/1.9.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.spigotmc....</groupId>
            <artifactId>spigot</artifactId>
            <version>1.9.4</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/deps/craftbukkit/1.9.4.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.spigotmc.....</groupId>
            <artifactId>spigot</artifactId>
            <version>1.10</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/deps/craftbukkit/1.10.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.spigotmc......</groupId>
            <artifactId>spigot</artifactId>
            <version>1.11</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/deps/craftbukkit/1.11.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.spigotmc.......</groupId>
            <artifactId>spigot</artifactId>
            <version>1.12</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/deps/craftbukkit/1.12.jar</systemPath>
        </dependency>
    <dependency>
        <groupId>com.github.cryptomorin</groupId>
        <artifactId>XSeries</artifactId>
        <version>7.8.0</version>
        <scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>com.gmail.filoghost</groupId>
        <artifactId>Hologram</artifactId>
        <version>2.4.0</version>
        <scope>system</scope>
        <systemPath>${project.basedir}/deps/hologram.jar</systemPath>
    </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>WorldGuard</artifactId>
            <version>6.2.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/deps/wg.jar</systemPath>
        </dependency>
    <dependency>
        <groupId>com.sk8q.worldedit</groupId>
        <artifactId>worldedit</artifactId>
        <version>6.0.0</version>
        <scope>system</scope>
        <systemPath>${project.basedir}/deps/we.jar</systemPath>
    </dependency>
    </dependencies>
</project>

